# hooper_api

./: README.md  db.sqlite3  manage.py  pyproject.toml
api/: serializers.py  urls.py  views.py
data/: models.py
data/migrations/: 0001_initial.py
docs/: api_documentation.md
hooper_api/: asgi.py  settings.py  urls.py  wsgi.py
services/: logic.py
